CNC/Interface/design/index.css
h2 {
	font-size: 30px;
	color: #34495e;
}

#sidemenu{
    position: fixed;
    left: 0;
    height: 100%;
    width: 200px;
    background-color: #34495e;
}

#main{
    position: absolute;
	right: 0;
	left: 200px;
    width: 100%;
    margin: 20px 20px 20px 20px;
}



button {
    background-color: #34495e;
    border: none;
    color: white;
    padding: 5px 40px;
    margin: 5px 0 5px 0;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    height: 100%;
    #border-radius: 8px;
}

section.content{
    position: absolute;
    width: 100%;
    height: 100%;
    margin-top: -1500%;
    -moz-transition: all 1s ease;
    -webkit-transition: all 1s ease;
    -ms-transition: all 1s ease;
    -o-transition: all 1s ease;
    transition: all 1s ease;
}


section.content:target{
    margin-top:0;
}

#status-overview, thead, tr {
    border: 1px solid;
    height: 30px;
    border-collapse: collapse;
    width: 80%;
    background-color: #3498db;
}

table{
    table-layout:fixed;
    word-wrap:break-word;
    width: 80%;
}

th {
	color: white;
    background-color: #34495e;
    cursor: pointer;
    text-align: left;
}

tbody{
    #background-color: white;
}

tbody tr:hover{
	#background: #16a085;
	color: white;
	-moz-transition: all 0.5s ease-in;
    -webkit-transition: all 0.5s ease-in;
    -ms-transition: all 0.5s ease-in;
    -o-transition: all 0.5s ease-in;
    transition: all 0.5s ease-in;
}


a:link, a:visited {
	font-size:18px;
    background-color: #2980b9;
    color: white;
    padding: 14px 25px;
    width: 130px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    margin: 0 0 0 20px;
    right: 0;
}

a:hover, a:active {
    color: black;
    -moz-transition: all 0.5s ease-in;
    -webkit-transition: all 0.5s ease-in;
    -ms-transition: all 0.5s ease-in;
    -o-transition: all 0.5s ease-in;
    transition: all 0.5s ease-in;
}



body {
	background: #2ecc71;
	margin: 0 0 0 0;
}

label{
 font-size:14px;
}

input[type="radio"]{
 float:left;
}

